fix #10 Tree verwerfen
Modulstruktur angepasst